# docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8000",
     "basePath": "/api/v1",
     "paths": {
-        "/manager/auth/refresh": {
+        "/managers/auth/refresh": {
             "post": {
                 "description": "manager refresh",
                 "consumes": [
@@ -39,11 +39,50 @@
                         "schema": {
                             "$ref": "#/definitions/service.Tokens"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
                     }
                 }
             }
         },
-        "/manager/sign-in": {
+        "/managers/manager/create": {
+            "post": {
+                "security": [
+                    {
+                        "ManagerAuth": []
+                    }
+                ],
+                "description": "manager creation",
+                "tags": [
+                    "manager"
+                ],
+                "summary": "Create New Manager",
+                "responses": {}
+            }
+        },
+        "/managers/sign-in": {
             "post": {
                 "description": "manager sign in",
                 "consumes": [
@@ -55,7 +94,7 @@
                 "tags": [
                     "manager-auth"
                 ],
-                "summary": "Manager SignIn",
+                "summary": "Manager Sign In",
                 "parameters": [
                     {
                         "description": "sign up info",
@@ -72,6 +111,30 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/service.Tokens"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/v1.response"
                         }
                     }
                 }
@@ -115,6 +178,21 @@
                     "type": "string"
                 }
             }
+        },
+        "v1.response": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "ManagerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
