# internal/delivery/http/v1/manager.go
@@ -7,10 +7,15 @@ import (
 )
 
 func (h *Handler) initManagerRoutes(api *gin.RouterGroup) {
-	managers := api.Group("/manager")
+	managers := api.Group("/managers")
 	{
 		managers.POST("/sign-in", h.managerSignIn)
 		managers.POST("/auth/refresh", h.managerRefresh)
+
+		manager := managers.Group("/manager", h.managerIdentity)
+		{
+			manager.POST("/create", h.managerCreateNew)
+		}
 	}
 }
 
@@ -22,16 +27,21 @@ func (h *Handler) initManagerRoutes(api *gin.RouterGroup) {
 // @Produce  json
 // @Param input body domain.SignInInput true "sign up info"
 // @Success 200 {object} service.Tokens
-// @Router       /manager/sign-in [post]
+// @Failure 400,404 {object} response
+// @Failure 500 {object} response
+// @Failure default {object} response
+// @Router       /managers/sign-in [post]
 func (h *Handler) managerSignIn(c *gin.Context) {
 	var input domain.SignInInput
 	if err := c.BindJSON(&input); err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, "bad request")
+		h.handleErrors(c, err)
+		return
 	}
 
 	res, err := h.services.Managers.SignIn(input)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, err.Error())
+		h.handleErrors(c, err)
+		return
 	}
 	c.JSON(http.StatusOK, res)
 }
@@ -44,16 +54,31 @@ func (h *Handler) managerSignIn(c *gin.Context) {
 // @Produce  json
 // @Param input body domain.RefreshInput true "refresh info"
 // @Success 200 {object} service.Tokens
-// @Router       /manager/auth/refresh [post]
+// @Failure 400,404 {object} response
+// @Failure 500 {object} response
+// @Failure default {object} response
+// @Router       /managers/auth/refresh [post]
 func (h *Handler) managerRefresh(c *gin.Context) {
 	var input domain.RefreshInput
 	if err := c.BindJSON(&input); err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest, "bad request")
+		newResponse(c, http.StatusBadRequest, errBadRequestMessage)
+		return
 	}
 
 	res, err := h.services.Managers.RefreshTokens(input.RefreshToken)
 	if err != nil {
-		c.AbortWithStatusJSON(http.StatusInternalServerError, err.Error())
+		h.handleErrors(c, err)
+		return
 	}
 	c.JSON(http.StatusOK, res)
+}
+
+// @Summary Create New Manager
+// @Security ManagerAuth
+// @Tags manager
+// @Description manager creation
+// @ModuleID managerCreateNew
+// @Router       /managers/manager/create [post]
+func (h *Handler) managerCreateNew(c *gin.Context) {
+	c.JSON(http.StatusOK, "ok")
 }
